--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -86,7 +86,7 @@
           </li>
         </ul>
         <a href="login">ログイン画面へ</a><br />
-        <a href="accountadmin/list">アカウント管理画面へ</a><br />
+        <a href="accountadmin">アカウント管理画面へ</a><br />
         <a href="accountcreate">アカウント作成画面へ</a><br />
         <a href="admin">管理者メニューへ</a><br />
         <a href="groupcreate">グループ作成画面へ</a><br />
