--- a/src/main/resources/templates/accountcreate/index.html
+++ b/src/main/resources/templates/accountcreate/index.html
@@ -28,6 +28,11 @@
         </div>
 
         <div class="form-group">
+          <label for="name">名前</label>
+          <input type="text" placeholder="名前を入力" required />
+        </div>
+
+        <div class="form-group">
           <label for="role">権限</label>
           <select id="role" name="role" required>
             <option value="" disabled selected></option>
